# iranleague-exporter

./: .dockerignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
iranleague_exporter/: __init__.py  __main__.py  config.py  crawler.py  main.py  utils.py
tests/: __init__.py  test_config.py  test_crawler.py  test_main.py  test_utils.py
